Fix alignment issues

--- a/microservices/www2/src/components/WwwCalculator/WwwCalculator.scss
+++ b/microservices/www2/src/components/WwwCalculator/WwwCalculator.scss
@@ -38,7 +38,7 @@
       margin: 16px 8px;
       border-radius: 12px;
       box-shadow: 0 0 0 1px $border-grey-light;
-      flex-basis: 100px;
+      flex-basis: 40%;
       flex-grow: 1;
       max-width: 180px;
       display: flex;
@@ -67,6 +67,15 @@
           color: black;
         }
       }
+
+      @media screen and (max-width: $small) {
+        padding: 12px;
+        flex-grow: 0;
+
+        .button-text {
+          font-size: 14px;
+        }
+      }
     }
   }
 
@@ -79,7 +88,15 @@
       width: 100%;
       max-width: 400px;
       margin: 0 auto;
-      min-width: 300px;
+      min-width: 280px;
+    }
+
+    &-field {
+      margin-bottom: 16px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
     }
   
     .card-bottom {
@@ -99,7 +116,7 @@
     padding: 0 16px;
 
     > * {
-      min-width: 300px;
+      min-width: 280px;
       max-width: 400px;
       margin: 0 auto;
     }
@@ -154,6 +171,12 @@
 
     .message {
       max-width: 400px;
+    }
+  }
+
+  &-field-adornment {
+    @media screen and (max-width: $med) {
+      font-size: 14px;
     }
   }
 }
